--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:name="${applicationName}">
+        android:name="${applicationName}"
+        android:label="variable_app_icon_example">
 
         <!-- Activity Aliases for dynamic app icons -->
         <activity-alias
@@ -42,7 +43,7 @@
             </intent-filter>
         </activity-alias>
 
-        <!-- Main Activity with intent-filter (required for launch) -->
+        <!-- Main Activity (no intent-filter) -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -55,10 +56,6 @@
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme"
             />
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
 
         <!-- Flutter plugin meta-data -->
