--- a/example/android/gradle/wrapper/gradle-wrapper.properties
+++ b/example/android/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,4 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 # distributionUrl=https\://services.gradle.org/distributions/gradle-7.6.3-all.zip
-distributionUrl=file\:///home/sumit/softwares/gradle-8.14-all.zip
+distributionUrl=file\:///apps/gradle/gradle-8.14-all.zip
